# Job_detail_extraction_llm

./: .gitignore  README.md  cdp_tabs.json  chrom_profile.py  docker-compose.yaml  google.py  index.html  jin.py  note.txt  pyproject.toml  steps.txt  test.py
source/: debug_job.json  graph.py  job_tracker.py  main.py  main_job.json  requirements.txt  run_node1.py  sample_urls.txt  state.py  state_json.json
source/api/: app.py  ats_domain_routes.py  routes.py
source/core/: config.py
source/domain_lists/: ats.json
source/job_runs/: job_debug_string.json  job_debug_test_2.json  job_debug_test_3.json  job_string.json  job_test_2.json  job_test_3.json  tasks.json  test_1.json
source/js_helper/: job_detail_page_extraction.py  page_extraction.py
source/nodes/: ats_check.py  button_click.py  career_page_category.py  convert_job_page_to_json.py  extract_page_content.py  job_detail_page_extraction.py  job_page_features.py  job_url_extraction.py  navigation.py  next_job_url_selection.py  page_category.py  page_filter.py  select_next_url.py  session_bootstrap.py  sort_page.py  url_extraction.py
source/progress_store/: agent_0_state.json  agent_1_main.json  agent_1_state.json  agent_2_main.json  agent_2_state.json  run_main.json  run_state.json
source/prompts/: ats_check_prompt.py  career_category_prompt.py  job_detail_to_json_prompt.py  job_deteail_ats_check.py  job_url_extraction_prompt.py  page_category_prompt.py
source/schemas/: ats_domain_api.py  job_api.py
source/services/: __init__.py  agent_allocator.py  api_artifact_store.py  api_task_store.py  (+22 more)
(+5 files in other folders)
